# redcap-omero

./: pyproject.toml  redcap-omero.ipynb  redcap_aux.py
